dissolved the n to n relation between MemberEntity and CoachEntity with CoachMemberEntity. added more JPAUserAdapterTest tests and also adjusted the JPAUserAdapter and mapper