@@ -6,6 +6,8 @@ import adapter.out.Entities.UserEntity;
 import domain.model.Coach;
 import domain.model.Member;
 
+import java.util.stream.Collectors;
+
 
 public class UserMapper {
 
@@ -14,13 +16,13 @@ public class UserMapper {
     public static Member toDomain(MemberEntity memberEntity) {
         return new Member(memberEntity.getId(), memberEntity.getFirstName(), memberEntity.getLastName(), memberEntity.getEmail(),
                 memberEntity.getPassword(), memberEntity.getGender(), memberEntity.getBornOn(), memberEntity.getCreatedAt(),
-                memberEntity.getCoaches().stream().map(UserEntity::getId).toList());
+                memberEntity.getAssignments().stream().map((as)->as.getCoach().getId()).collect(Collectors.toList()));
     }
 
     public static Coach toDomain(CoachEntity coachEntity) {
         return new Coach(coachEntity.getId(), coachEntity.getFirstName(), coachEntity.getLastName(), coachEntity.getEmail(),
                 coachEntity.getPassword(), coachEntity.getGender(), coachEntity.getBornOn(), coachEntity.getCreatedAt(),
-                coachEntity.getClients().stream().map(UserEntity::getId).toList());
+                coachEntity.getAssignments().stream().map((as)->as.getMember().getId()).collect(Collectors.toList()));
     }
 
     public static MemberEntity toEntity(Member member) {
